getCourseDayOfWeek에서 stream 로직 변경